<resources>
  <string name="app_name">WGU APP</string>
  <string name="create_new_text">Add</string>
  <string name="assessment_details_text">Assessment Details</string>
  <string name="terms_text">Terms</string>
  <string name="courses_text">Courses</string>
  <string name="assessments_text">Assessments</string>
  <string name="mentors_text">Mentors</string>
  <string name="assessment_details">Assessment Details</string>
  <string name="type_text">Type</string>
  <string name="title_text">Title</string>
  <string name="due_date_text">Due Date</string>
  <string name="delete_text">Delete</string>
  <string name="save_text">Save</string>
  <string name="new_assessment">New Assessment</string>
  <string name="new_mentor">New Mentor</string>
  <string name="name_text">Name</string>
  <string name="phone_text">Phone</string>
  <string name="email_text">Email</string>
  <string name="mentor_details_text">Mentor Details</string>
  <string name="new_course_text">New Course</string>
  <string name="course_details_text">Course Details</string>
  <string name="start_date_text">Start Date</string>
  <string name="end_date_text">End Date</string>
  <string name="status_text">Status</string>
  <string name="note_text">Note</string>
  <string name="term_details_text">Term Details</string>
  <string name="new_term_text">New Term</string>
  <string name="delete_term_text">Term not deleted, remove courses from term before trying to delete it.</string>
  <string name="share_text">Share Note</string>
  <string name="add_assessments_text">Add Assessments</string>
  <string name="edit_assessments_text">Edit Assessments</string>
  <string name="edit_mentors_text">Edit Mentors</string>
  <string name="add_mentors_text">Add Mentors</string>
  <string name="add_courses_text">Add Courses</string>
  <string name="edit_courses_text">Edit Courses</string>
  <string name="alert_text">Alert?</string>
  <string name="valid_date_string">Please enter a valid date.</string>
  <string name="date_format_text">MM/dd/yyyy HH:mm:ss</string>
  <string-array name="assessment_types">
    <item>Objective</item>
    <item>Performance</item>
  </string-array>
</resources>
