<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.example.sirjackovich.wguapp.courses.CourseDetailsActivity">


<GridLayout
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:columnCount="2"
  android:rowCount="4">

  <TextView
    android:id="@+id/title_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/title_text" />

  <EditText
    android:id="@+id/title_edit_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/start_date_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/start_date_text" />

  <EditText
    android:id="@+id/start_date_edit_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/end_date_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/end_date_text" />

  <EditText
    android:id="@+id/end_date_edit_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/status_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/status_text" />

  <EditText
    android:id="@+id/status_edit_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/note_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/note_text" />

  <EditText
    android:id="@+id/note_edit_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

  <Button
    android:id="@+id/delete_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginStart="8dp"
    android:onClick="handleDelete"
    android:text="@string/delete_text" />

  <Button
    android:id="@+id/save_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:onClick="handleSave"
    android:text="@string/save_text" />
</GridLayout>

</RelativeLayout>